--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="#!/test2">Test2</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#!/pug">PUG</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#!/handlebars">Handlebars</a>
+            </li>
         </ul>
     </div>
 </nav>
